samples/_failures_safe/1761289609_ab3e5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4beac643.c: In function ‘main’:
./samples/SAFE/__tmp_4beac643.c:199:9: error: expected expression at end of input
  199 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_4beac643.c:199:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4beac643.c:199:9: error: expected declaration or statement at end of input
